[package]
name = "math-compare"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/cu_fix",
    "crates/cu_fixed",
    "crates/cu_rust_decimal",
    "crates/cu_spl_math",
]
resolver = "2"

[workspace.dependencies]
fix = "0.1.1"
fixed = "=1.30.0"
rust_decimal = { version = "1.42.0", default-features = false, features = ["maths"] }
spl-math = { version = "0.3.0", features = ["no-entrypoint", "test-sbf"] }
svm-unit-test = "0.1.8"
